--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h3><a href="projets.html">Mes anciens projets</a></h3>
             </article>
             <article class="objet">
-                <h3><a href="expériences.html">Mes expériences</a></h3>
+                <h3><a href="Expériences.html">Mes expériences</a></h3>
             </article>
         </section>
     </main>
